--- a/plat.plist
+++ b/plat.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://transfer.musecdn1.com/xcy2vkhpv/727a2e1e340339b46fc07dd9824af7b4.ipa?auth_key=1710810000-eGN5MnZraHB2OjEyMDU5Mw-0-20bff8c7b838a5e0d1425ff74b40327d&response-content-type=application/octet-stream&response-content-disposition=attachment%3B%20filename%3D%22bitfarm.ipa%22%3B%20filename%2A%3DUTF-8%27%27bitfarm.ipa</string>
+					<string>https://github.com/sunyuHL/bitfarm/raw/main/bitfarm.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
