--- a/plat.plist
+++ b/plat.plist
@@ -29,9 +29,9 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.g-bits.plat</string>
+				<string>com.gbits.bitfarm6</string>
 				<key>bundle-version</key>
-				<string>0.1.5</string>
+				<string>1.0.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
